// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles an load error from JSONFileInput 1`] = `
<div
  className="story-loader"
>
  <button
    onClick={[Function]}
  >
    New Story
  </button>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <label
      htmlFor="story-file-loader"
    >
      <span>
        Upload a .json story file
      </span>
      <input
        accept="application/json"
        id="story-file-loader"
        name="story-file-loader"
        onChange={[Function]}
        type="file"
      />
    </label>
    <span
      className="error-message"
    >
      Error form JSON File Input
       
      <span
        className="close"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times-circle fa-w-16 "
          data-icon="times-circle"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="url-loader"
      >
        <span>
          Enter a URL for a .json story file
        </span>
        <input
          id="url-loader"
          name="url-loader"
          onChange={[Function]}
          placeholder="JSON url or serverpath"
          type="text"
          value="test/test.json"
        />
      </label>
      <button>
        Load!
      </button>
    </form>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="story-loader"
>
  <button
    onClick={[Function]}
  >
    New Story
  </button>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <label
      htmlFor="story-file-loader"
    >
      <span>
        Upload a .json story file
      </span>
      <input
        accept="application/json"
        id="story-file-loader"
        name="story-file-loader"
        onChange={[Function]}
        type="file"
      />
    </label>
  </div>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="url-loader"
      >
        <span>
          Enter a URL for a .json story file
        </span>
        <input
          id="url-loader"
          name="url-loader"
          onChange={[Function]}
          placeholder="JSON url or serverpath"
          type="text"
          value="data/story.json"
        />
      </label>
      <button>
        Load!
      </button>
    </form>
  </div>
</div>
`;

exports[`updates file url path 1`] = `
<div
  className="story-loader"
>
  <button
    onClick={[Function]}
  >
    New Story
  </button>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <label
      htmlFor="story-file-loader"
    >
      <span>
        Upload a .json story file
      </span>
      <input
        accept="application/json"
        id="story-file-loader"
        name="story-file-loader"
        onChange={[Function]}
        type="file"
      />
    </label>
  </div>
  <div
    className="separator"
  >
    Or
  </div>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="url-loader"
      >
        <span>
          Enter a URL for a .json story file
        </span>
        <input
          id="url-loader"
          name="url-loader"
          onChange={[Function]}
          placeholder="JSON url or serverpath"
          type="text"
          value="test/test.json"
        />
      </label>
      <button>
        Load!
      </button>
    </form>
  </div>
</div>
`;
